[package]
name = "twitter-to-dataset"
version = "0.1.0"
edition = "2021"
description = "Convert a personal Twitter/X archive into Alpaca-format fine-tuning datasets"
license = "MIT"
repository = "https://github.com/benthecarman/twitter-to-dataset"
readme = "README.md"
keywords = ["twitter", "alpaca", "dataset", "llm", "finetuning"]
categories = ["command-line-utilities", "parser-implementations"]
exclude = ["dataset*.jsonl", "*.jsonl", "target/*"]

[[bin]]
name = "twitter-to-dataset"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
regex = "1"
indicatif = "0.17"
tokio-util = "0.7"
futures = "0.3"
anyhow = "1.0.102"
html-escape = "0.2"
